Add lightbox.js to display full image in gallery.html Minify js with uglifyjs

--- a/css/style.css
+++ b/css/style.css
@@ -673,7 +673,7 @@ My customizations
     border-top: 1px solid white;
 }
 .contact-container .contact-icon{
-    width: auto;
+    width: 24px;
     margin-right: 10px;
 }
 
