--- a/css/before-after.css
+++ b/css/before-after.css
@@ -3,6 +3,7 @@
 	 /*width: 900px;*/
 	 height: 600px;
 	 border: 2px solid white;
+	 max-width: 1200px;
 }
  .container-ab .img {
 	 position: absolute;
@@ -10,7 +11,7 @@
 	 left: 0;
 	 width: 100%;
 	 height: 100%;
-	 background-size: 900px 100%;
+	 background-size: 1200px 100%;
 }
  .container-ab .background-img {
 	 background-image: url('../images/chantier/portes placard/IMG_20220113_154925.jpg');
@@ -39,13 +40,13 @@
  .container-ab .slider::-webkit-slider-thumb {
 	 -webkit-appearance: none;
 	 appearance: none;
-	 width: 6px;
+	 width: 10px;
 	 height: 600px;
 	 background: white;
 	 cursor: pointer;
 }
  .container-ab .slider::-moz-range-thumb {
-	 width: 6px;
+	 width: 10px;
 	 height: 600px;
 	 background: white;
 	 cursor: pointer;
@@ -57,8 +58,8 @@
 	 height: 30px;
 	 border-radius: 50%;
 	 background-color: white;
-	 left: calc(50% - 18px);
-	 top: calc(50% - 18px);
+	 left: calc(50% - 0px);
+	 top: calc(50% - 16px);
 	 display: flex;
 	 justify-content: center;
 	 align-items: center;
