--- a/css/style.css
+++ b/css/style.css
@@ -726,3 +726,7 @@ My customizations
     width: fit-content !important;
     max-width: initial !important;
 }
+
+.insta-home{
+    font-size: xx-large;
+}
